fixed problem where error message was not showing, added css styling to style.css

--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,13 @@ button {
 div {
     text-align: center;
 }
+
+.map {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+body {
+    background-color: lightcyan;
+}
